# SAT_Solver

./: CMakeLists.txt  README.md  gitlog
benchmark_suite/: benchmark.py
data/: par16-1.cnf  simple_v3_c2.cnf
solver/: CMakeLists.txt  ProgramOptions.hpp  main.cpp
solver/backtracking_heuristics/: BacktrackingHeuristics.cpp  BacktrackingHeuristics.h
solver/branching_heuristics/: BOHM.cpp  BOHM.h  BranchingHeuristic.hpp  JeroslowWang.cpp  JeroslowWang.h  MOM.cpp  MOM.h  MaxMinClause.cpp  MaxMinClause.h  Random.cpp  Random.h  VSIDS.cpp  VSIDS.h
solver/logic/: AtomicProposition.cpp  AtomicProposition.h  Clause.cpp  Clause.h  Literal.cpp  Literal.h  Variable.cpp  Variable.h
solver/solver/: Solver.cpp  Solver.h
src/: CMakeLists.txt  ProgramOptions.hpp  main.cpp
src/backtracking_heuristics/: BacktrackingHeuristics.h
src/branching_heuristics/: BOHM.cpp  BOHM.h  BranchingHeuristic.hpp  JeroslowWang.cpp  JeroslowWang.h  MOM.cpp  MOM.h  MaxMinClause.h  Random.cpp  Random.h
src/heuristics/: BacktrackingHeuristics.cpp  BacktrackingHeuristics.h  BranchingHeuristics.cpp  BranchingHeuristics.h  Graph.cpp  Graph.h
src/logic/: AtomicProposition.cpp  AtomicProposition.h  Clause.cpp  Clause.h  Variable.h
src/solver/: Solver.cpp  Solver.h
test/: CMakeLists.txt  Solver_Tests.cpp
test/heuristic_tests/: BacktrackingHeuristics_Tests.cpp  BranchingHeuristics_Tests.cpp  Graph_Tests.cpp
test/logic_tests/: AtomicProposition_Tests.cpp  Clause_Tests.cpp  Literal_Tests.cpp  Variable_Tests.cpp
test/test_data/: simple_sat.cnf  simple_unsat.cnf
verifier/: CMakeLists.txt  main.cpp
